<resources>
    <string name="app_name">Inventory app</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_title_text">There is no products in the list</string>
    <string name="empty_view_subtitle_text">Press the button below to add products</string>
    <string name="title_activity_productview">productview</string>
    <string name="p_name">Product name:</string>
    <string name="quan">quantity:</string>
    <string name="prod_nm">prod name</string>
    <string name="qun">prod quan</string>
    <string name="add_img">Add image</string>
    <string name="descript_btn">sale</string>
    <string name="labelprice">Price</string>
    <string name="price_num">prod price</string>
    <string name="descript_im_product">image of product</string>
    <string name="details_label">Product Details</string>
    <string name="add_new_title">Add new product</string>
    <string name="edit_product_title">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="editor_delete_product_failed">failed to delete</string>
    <string name="editor_delete_product_successful">delete successful</string>
    <string name="title_activity_editproduct">editproduct</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_edit">Edit</string>
    <string name="hint_quan">quantity</string>
    <string name="hint_name">product name</string>
    <string name="hint_price">price</string>
    <string name="success_save">Save Successful</string>
    <string name="fail_save">Save failing</string>
    <string name="editor_update_product_failed">Update failed</string>
    <string name="editor_update_product_successful">Update successful</string>
    <string name="cannot_save">Empty fields, please enter all data</string>
    <string name="fail">Fail to save to DataBase</string>
</resources>
