<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nayir.inventory.productview">

    <TextView
        style="@style/Base.AlertDialog.AppCompat.Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/details_label"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.AlertDialog.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/proname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/prod_nm"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.AlertDialog.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quan"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/proquan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:text="@string/qun"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.AlertDialog.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelprice"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/proprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="95dp"
            android:text="@string/price_num"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/img"
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/descript_im_product"
        android:src="@drawable/nimage" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/ship"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="10dp"
            android:src="@drawable/plus" />

        <ImageButton
            android:id="@+id/sale_quan"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="9dp"
            android:background="@null"
            android:contentDescription="@string/descript_btn"
            android:scaleType="centerCrop"
            android:src="@drawable/dollar" />

        <ImageButton
            android:id="@+id/tele"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="75dp"
            android:layout_marginRight="10dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/telephone" />

    </LinearLayout>

</LinearLayout>
