<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nayir.inventory.editproduct">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.AlertDialog.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_name"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/proname_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:hint="@string/hint_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.AlertDialog.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quan"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/proquan_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="65dp"
            android:layout_weight="1"
            android:hint="@string/hint_quan"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Base.AlertDialog.AppCompat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelprice"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/proprice_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_weight="1"
            android:hint="@string/hint_price"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/img_ed"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:layout_marginLeft="15dp"
            android:src="@drawable/nimage" />

        <Button
            android:id="@+id/add_img"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:text="Add\nImage" />
    </LinearLayout>
</LinearLayout>
